--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "start": "nodemon bot.js"
+    "start": "node bot.js",
+    "dev": "nodemon bot.js" 
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1"
   },
   "devDependencies": {
